UseCaseManagement/force-app/main/default/objects/Publication_Employee__c/Publication_Employee__c.object-meta.xml
<CustomObject>
    <label>Publication Employee</label>
    <nameField>
        <label>Publication Employee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Publication Employee</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>