UseCaseManagement/force-app/main/default/objects/Publication_Employee__c/fields/Experience__c.field-meta.xml
<CustomField>
    <fullName>Experience__c</fullName>
    <inlineHelpText>Number of years</inlineHelpText>
    <label>Experience</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>