UseCaseManagement/force-app/main/default/objects/Publication_Employee__c/fields/Publication_Name__c.field-meta.xml
<CustomField>
    <fullName>Publication_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Publication Name</label>
    <referenceTo>Publication__c</referenceTo>
    <relationshipLabel>Publication Employee</relationshipLabel>
    <relationshipName>Publication_Employee</relationshipName>
    <type>Lookup</type>
</CustomField>